--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -52,7 +52,7 @@
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
     {% endif %}
     
-    {% if post.citation and post.paperurl and post.slidesurl and post.bibtexurl %}
+    <!-- {% if post.citation and post.paperurl and post.slidesurl and post.bibtexurl %}
       <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a> | <a href="{{ post.slidesurl }}">Download Slides</a> | <a href="{{ post.bibtexurl }}">Download Bibtex</a></p>
     {% elsif post.citation and post.paperurl and post.slidesurl %}
       <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a> | <a href="{{ post.slidesurl }}">Download Slides</a></p>
@@ -78,6 +78,29 @@
       <p><a href="{{ post.slidesurl }}">Download Slides</a></p>
     {% elsif post.bibtexurl %}
       <p><a href="{{ post.bibtexurl }}">Download Bibtex</a></p>
+    {% endif %} -->
+    {% if post.citation or post.paperurl or post.slidesurl or post.bibtexurl or post.accessurl %}
+      <p>
+        {% if post.citation %}
+          Recommended citation: {{ post.citation }}<br />
+        {% endif %}
+        
+        {% if post.accessurl %}
+          <a href="{{ post.accessurl }}" target="_blank">Read Online</a>{% if post.paperurl or post.slidesurl or post.bibtexurl %} | {% endif %}
+        {% endif %}
+
+        {% if post.paperurl %}
+          <a href="{{ post.paperurl }}" target="_blank">Download Paper</a>{% if post.slidesurl or post.bibtexurl %} | {% endif %}
+        {% endif %}
+
+        {% if post.slidesurl %}
+          <a href="{{ post.slidesurl }}" target="_blank">Download Slides</a>{% if post.bibtexurl %} | {% endif %}
+        {% endif %}
+
+        {% if post.bibtexurl %}
+          <a href="{{ post.bibtexurl }}" target="_blank">Download Bibtex</a>
+        {% endif %}
+      </p>
     {% endif %}
 
   </article>
